Fix IE8 alignment issues ..
* static/css/layout.css
  remove overflow property from wrapper class

* templates/base.html
  remove rounded corners from advanced search, for modal to work properly in ie8

--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -56,7 +56,6 @@ form ul li label {
 }
 #wrapper {
   width: 900px;
-  overflow: auto;
   background-color: #bfbfbf;	
   background-image: url(../design_art/content_bg.png);
   margin-left: auto;
